<resources>
    <string name="app_name">Stage App</string>
    <string name="home">Home</string>
    <string name="shearch">Shearch</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">SignUP</string>
    <string name="admin">Admin</string>
    <string name="name_of_product">Name of product</string>
    <string name="description_of_product">Description of product</string>
    <string name="quantity_of_product">Quantity of product</string>
    <string name="price_of_product">Price of product</string>
    <string name="price_format">MAD %1$.2f</string>
    <string name="no_discount">No Discount Available</string>
    <string name="lanch_product">Lanch Product</string>
    <string name="username">UserName</string>
    <string name="number_phone">Number phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_profile">Add Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="add_products">Add Products</string>
    <string name="update_products">Update Products</string>
    <string name="delete_products">Delete Products</string>
    <string name="show_users">Show Users</string>
    <string name="delete">Delete</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="update_product">Update Product</string>
    <string name="rename_price_of_product">Rename Price of product</string>
    <string name="rename_quantity_of_product">Rename Quantity of product</string>
    <string name="rename_description_of_product">Rename Description of product</string>
    <string name="rename_name_of_product">Rename Name of product</string>
    <string name="the_name_of_the_product_you_want_to_modify">The name of the product you want to modify</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="favorites">Favorites</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="name_of_prodact">Name Of Prodact</string>
    <string name="description_of_prodact">Description Of Prodact</string>
    <string name="quantity_of_prodact">Quantity Of Prodact</string>
    <string name="prace_of_prodact">Prace Of Prodact </string>
    <string name="the_email_of_the_user_you_want_to_modify">The email of the user you want to modify</string>
    <string name="promotion_prace_of_prodact">Promotion prace of prodact</string>
    <string name="switch_description">Toggle dark mode</string>

</resources>