<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SignUP">

    <EditText
        android:id="@+id/emailSignup_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/the_email_of_the_user_you_want_to_modify"
        android:background="@drawable/shipedittext"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:drawableStart="@drawable/icon_email"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill,TextFields" />


    <EditText
        android:id="@+id/usernamUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/shipedittext"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/icon_usernam"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/emailUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/shipedittext"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:drawableStart="@drawable/icon_email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/tellUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_phone"
        android:background="@drawable/shipedittext"
        android:padding="15dp"
        android:inputType="number"
        android:drawableStart="@drawable/icon_phone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/passwordUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/shipedittext"
        android:drawableStart="@drawable/icon_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/confirm_passwordUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/shipedittext"
        android:drawableStart="@drawable/icon_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/btnUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="15dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:backgroundTint="@color/black" />



</LinearLayout>