<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shipedittext"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/NameProduct_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/the_name_of_the_product_you_want_to_modify"
            android:inputType="text"
            android:padding="16dp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/UpdateProductImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shape"
            android:scaleType="fitXY"
            android:src="@drawable/background_error"
            tools:ignore="ContentDescription" />



        <EditText
            android:id="@+id/UpdateProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/rename_name_of_product"
            android:inputType="text"
            android:padding="16dp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />




        <EditText
            android:id="@+id/UpdateProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/rename_description_of_product"
            android:padding="16dp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/UpdateProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/rename_quantity_of_product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/UpdateProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/rename_price_of_product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/UpdateProductPricePromotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="Rename price promotion of product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnUpdateProductUP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:text="@string/update_product"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</LinearLayout>