<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/image_Favorite"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/background_error" />

    <TextView
        android:id="@+id/info_tv_namP_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/image_Favorite"
        android:text="@string/name_of_product" />

    <TextView
        android:id="@+id/info_tv_description_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_namP_Favorite"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/image_Favorite"
        android:text="@string/description_of_product" />

    <TextView
        android:id="@+id/info_tv_quantity_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_description_Favorite"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/image_Favorite"
        android:text="@string/quantity_of_product" />

    <TextView
        android:id="@+id/info_tv_pricePromotion_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_quantity_Favorite"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/image_Favorite"
        android:text="Proprice_of_product" />

    <TextView
        android:id="@+id/info_tv_priceP_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_pricePromotion_Favorite"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/image_Favorite"
        android:foreground="@drawable/strikethrough"
        android:text="@string/price_of_product"
        android:textColor="@color/black"
        android:textSize="18sp" />
</RelativeLayout>