<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shipedittext"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/AddProductImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shape"
            android:scaleType="fitXY"
            android:src="@drawable/background_error"
            tools:ignore="ContentDescription" />


        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/AddProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/name_of_product"
            android:inputType="text"
            android:padding="16dp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/AddProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:background="@drawable/shipedittext"
            android:hint="@string/description_of_product"
            android:padding="16dp"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/addProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/quantity_of_product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="@string/price_of_product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/addProductPromotionPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shipedittext"
            android:hint="Promotion price of product"
            android:inputType="number"
            android:padding="16dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnLanchProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/lanch_product"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</LinearLayout>