<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/click_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_order"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_error" />


    <TextView
        android:id="@+id/info_tv_nam_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/image_order"
        android:text="@string/name_of_prodact" />

    <TextView
        android:id="@+id/info_tv_description_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_nam_order"
        android:layout_marginStart="210dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/description_of_prodact"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/info_tv_price_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_nam_order"
        android:layout_marginStart="210dp"
        android:layout_marginTop="50dp"
        android:text="@string/prace_of_prodact"
        android:textColor="@color/black"
        android:foreground="@drawable/strikethrough"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/info_tv_pricePromorion_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_tv_description_order"
        android:layout_marginStart="210dp"
        android:layout_marginTop="29dp"
        android:text="@string/promotion_prace_of_prodact"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_order"
        android:layout_marginTop="0dp"
        android:background="#e7e7e7"
        android:paddingStart="15dp"
        android:text="Service"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginTop="20dp"
        android:background="#e7e7e7"
        android:paddingStart="15dp"
        android:text="Fast Delivery"
        android:textColor="#3cb80f"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_return_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/shap_button_white"
        android:text="Returns/refunds"
        android:textColor="@color/black" />

</RelativeLayout>