<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/click_product"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="25dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_info_category"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_error" />

    <ImageView
        android:id="@+id/icon_add_panier"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="125dp"
        android:layout_marginStart="132dp"
        android:src="@drawable/baseline_add_24"/>


    <TextView
        android:id="@+id/info_tv_priceP_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_info_category"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/info_tv_discount_search"
        android:foreground="@drawable/strikethrough"
        android:text="@string/prace_of_prodact"/>

    <TextView
        android:id="@+id/info_tv_discount_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_info_category"
        android:layout_marginStart="10dp"
        android:text="@string/prace_of_prodact"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/info_tv_description_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_below="@id/info_tv_namP_category"
        android:text="@string/promotion_prace_of_prodact"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/info_tv_namP_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_tv_priceP_category"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:text="@string/name_of_prodact" />

</RelativeLayout>